--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,20 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
-
     defaultConfig {
-        applicationId "com.fiu_CaSPR.sajib.safebuk"
-        minSdkVersion 14
+        applicationId 'com.fiu_CaSPR.sajib.TrustPal'
+        minSdkVersion 19
         targetSdkVersion 21
-        versionCode 1
         versionName "1.0"
+        versionCode 4
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 repositories {
@@ -35,4 +36,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile files('libs/android-async-http-1.4.9.jar')
+    compile files('libs/commons-lang-2.6.jar')
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile files('libs/hellocharts-library-1.5.8.jar')
 }
