--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light">
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.MainActivity"
-            android:label="@string/title_activity_main"
-            android:screenOrientation="portrait"
+            android:name=".Welcome"
+            android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,73 +27,70 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.AfterLogin"
-            android:configChanges="orientation"
+            android:name=".Consent"
             android:label="@string/title_activity_main"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.fiu_CaSPR.Sajib.TrustPal.MainActivity" />
-        </activity>
-
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/app_id" />
-
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".AfterLogin"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FetchData"
+            android:name=".FetchData"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.friendsPage"
+            android:name=".friendsPage"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.url0"
+            android:name=".url0"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.url1"
-            android:label="@string/title_activity_fetch_data"></activity>
+            android:name=".url1"
+            android:label="@string/title_activity_fetch_data" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.url2"
+            android:name=".url2"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.url3"
+            android:name=".url3"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.url4"
-            android:label="@string/title_activity_fetch_data"></activity>
+            android:name=".url4"
+            android:label="@string/title_activity_fetch_data" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.friendurl0"
+            android:name=".friendurl0"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.friendurl1"
+            android:name=".friendurl1"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.friendurl2"
+            android:name=".friendurl2"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.friendurl3"
+            android:name=".friendurl3"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.friendurl4"
+            android:name=".friendurl4"
             android:label="@string/title_activity_fetch_data"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FriendPickerStarter"
+            android:name=".FriendPickerStarter"
             android:label="@string/title_activity_friend_picker_starter"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -106,7 +107,7 @@
                 android:value="com.fiu_CaSPR.Sajib.TrustPal.FriendPickerStarter" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.SaveFriends"
+            android:name=".SaveFriends"
             android:label="@string/title_activity_finish_job"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -114,7 +115,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FinishJob"
+            android:name=".FakeLogout"
             android:label="@string/title_activity_finish_job"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -122,7 +123,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FakeLogout"
+            android:name=".FinishJob"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -130,7 +131,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FriendSelectorView2"
+            android:name=".FriendSelectorView2"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -138,7 +139,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FriendSelectorView3"
+            android:name=".FriendSelectorView3"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -146,7 +147,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FriendSelectorView4"
+            android:name=".FriendSelectorView4"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -154,7 +155,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.FriendSelectorView5"
+            android:name=".FriendSelectorView5"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -162,7 +163,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.puzzle1"
+            android:name=".puzzle1"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -170,7 +171,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.puzzle2"
+            android:name=".puzzle2"
             android:label="@string/title_activity_fake_logout"
             android:parentActivityName=".FriendSelectorView1"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -179,7 +180,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.puzzle3"
+            android:name=".puzzle3"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -187,7 +188,7 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.puzzle4"
+            android:name=".puzzle4"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
@@ -195,13 +196,26 @@
                 android:value=".FriendSelectorView1" />
         </activity>
         <activity
-            android:name="com.fiu_CaSPR.Sajib.TrustPal.puzzle5"
+            android:name=".puzzle5"
             android:label="@string/title_activity_fake_logout"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".FriendSelectorView1" />
         </activity>
+        <activity
+            android:name=".ResultSummary"
+            android:label="@string/title_activity_fetch_data"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".FriendResult"
+            android:label="@string/title_activity_fake_logout"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".FriendSelectorView1" />
+        </activity>
+
     </application>
 
 </manifest>
